# MISO-Proyecto-Final-G10

./: .gitignore  README.md  cli.py  orval.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
Backend/: docker-compose.yml  gke-deploy-guide.md  init.sql  locustfile.py
Backend/ventas/: .env.example  .env.test  CLAUDE.md  Dockerfile  HU.md  README.md  compose.dev.yaml  compose.prod.yaml  pyproject.toml
Backend/ventas/app/: __init__.py
Backend/ventas/app/blueprints/: __init__.py  commands.py  health.py  sales_plan.py  sellers.py
Backend/ventas/app/commands/: __init__.py  base_command.py
Backend/ventas/app/commands/sales_plan/: __init__.py  create.py  delete.py  get.py  update.py
Backend/ventas/app/commands/sales_plan_seller/: __init__.py  create.py  delete.py  get.py  update.py
Backend/ventas/app/commands/seller/: __init__.py  create.py  delete.py  get.py  update.py
Backend/ventas/app/config/: application.py
Backend/ventas/app/lib/: auth.py  errors.py  validators.py
Backend/ventas/app/models/: __init__.py  model.py  sales_plan.py  sales_plan_seller.py  seller.py  user.py
Backend/ventas/app/responses/: __init__.py  health.py  sales_plan.py  seller.py
Backend/ventas/app/schemas/: __init__.py  sales_plan.py  seller.py  user.py
Backend/ventas/tests/: conftest.py
Backend/ventas/tests/blueprints/: test_sales_plan.py  test_sellers.py
WebApp/: README.md  angular.json  package-lock.json  (+1 more)
apps/exp-01/: .env.example  .gitignore  compose.prod.yaml  pyproject.toml
apps/exp-01/app/: __init__.py
apps/exp-01/app/blueprints/: commands.py  hello_world.py
apps/exp-01/app/config/: application.py
apps/exp-01/app/models/: user.py
apps/exp-01/instance/: db.sqlite3
apps/experimento-seguridad/gestion-inventario-service/: README.md  compose.dev.yaml  compose.prod.yaml  pyproject.toml
apps/experimento-seguridad/gestion-inventario-service/app/: __init__.py
apps/experimento-seguridad/gestion-inventario-service/app/blueprints/: hello_world.py
apps/experimento-seguridad/gestion-inventario-service/tests/blueprints/: test_health_world.py  test_hello_world.py
(+489 files in other folders)
